Made tomcat dist of coin-rave-dist